# greenmarketecuador4

./: .gitignore  .replit  main.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt
static/css/: style.css
templates/: admin_add_product.html  admin_base.html  admin_change_password.html  admin_customization.html  admin_dashboard.html  admin_edit_product.html  admin_login.html  admin_payments.html  base.html  cart.html  checkout.html  contact.html  index.html  login.html  payment_cancel.html  payment_success.html  product_detail.html  profile.html  register.html
